chore : add page total